ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shop-ingress
  namespace: pets
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/products2`)
      kind: Rule
      middlewares:
        - name: test-products
      services:
        - name: product-service
          port: 3002
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: store-front
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-products
  namespace: pets
spec:
  stripPrefix:
    prefixes:
      - /products
      - /products2
